Adjusted get_audio_features so it can be applied to entire dataframe and create new columns for each feature

--- a/billboard.ipynb
+++ b/billboard.ipynb
@@ -772,23 +772,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_audio_features(id):\n",
-    "    searchResults = sp.audio_features(id)[0]\n",
-    "    return searchResults"
+    "    search_results = sp.audio_features(id)[0]\n",
+    "    danceability = search_results['danceability']\n",
+    "    energy = search_results['energy']\n",
+    "    key = search_results['key']\n",
+    "    loudness = search_results['loudness']\n",
+    "    mode = search_results['mode']\n",
+    "    speechiness = search_results['speechiness']\n",
+    "    acousticness = search_results['acousticness']\n",
+    "    instrumentalness = search_results['instrumentalness']\n",
+    "    liveness = search_results['liveness']\n",
+    "    valence = search_results['valence']\n",
+    "    tempo = search_results['tempo']\n",
+    "    duration_ms = search_results['duration_ms']\n",
+    "    time_signature = search_results['time_signature']\n",
+    "\n",
+    "    return danceability, energy, key, loudness, mode, speechiness, acousticness, instrumentalness, liveness, \\\n",
+    "                valence, tempo, duration_ms, time_signature\n",
+    "\n",
+    "# get_audio_features('3MjUtNVVq3C8Fn0MP3zhXa')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3MjUtNVVq3C8Fn0MP3zhXa\n"
+     ]
+    }
+   ],
    "source": [
-    "song = 'Stay Away From Me (I Love You Too Much)'\n",
-    "artist = \"Major Lance\"\n",
+    "song = 'One more time'\n",
+    "artist = \"britney spears\"\n",
     "\n",
     "# result = sp.search(q=f\"track:{song} artist:{artist} \", type=\"track\")#['tracks']['items'][0]['id']\n",
     "\n",
@@ -1494,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,206 +1534,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>song</th>\n",
-       "      <th>artist</th>\n",
-       "      <th>year</th>\n",
-       "      <th>peak-rank</th>\n",
-       "      <th>weeks-on-board</th>\n",
-       "      <th>weeks-at-no1</th>\n",
-       "      <th>track_id</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>(1-2-3-4-5-6-7) Count The Days</td>\n",
-       "      <td>Inez &amp; Charlie Foxx</td>\n",
-       "      <td>1968</td>\n",
-       "      <td>76</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4wXNtDvLZl55vlQashWQrI</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>(A Ship Will Come) Ein Schiff Wird Kommen</td>\n",
-       "      <td>Lale Anderson</td>\n",
-       "      <td>1961</td>\n",
-       "      <td>88</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>(All Of A Sudden) My Heart Sings</td>\n",
-       "      <td>Mel Carter</td>\n",
-       "      <td>1965</td>\n",
-       "      <td>38</td>\n",
-       "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6x5BiQwNlbtisITsEHa8Eu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>(Baby) Hully Gully</td>\n",
-       "      <td>The Olympics</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>72</td>\n",
-       "      <td>7</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2CkbNJooPxUsHG4gFXKhxa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>(Come round Here) Im The One You Need</td>\n",
-       "      <td>The Miracles</td>\n",
-       "      <td>1966</td>\n",
-       "      <td>17</td>\n",
-       "      <td>9</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5YvokzRkNONpj5c0TIqTjQ</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1474</th>\n",
-       "      <td>pov</td>\n",
-       "      <td>Ariana Grande</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>27</td>\n",
-       "      <td>20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3UoULw70kMsiVXxW0L3A33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1475</th>\n",
-       "      <td>pride.is.the.devil</td>\n",
-       "      <td>J. Cole &amp; Lil Baby</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1476</th>\n",
-       "      <td>punchin.the.clock</td>\n",
-       "      <td>J. Cole</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1477</th>\n",
-       "      <td>the.climb.back</td>\n",
-       "      <td>J. Cole</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>25</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1478</th>\n",
-       "      <td>transparentsoul</td>\n",
-       "      <td>Willow Featuring Travis Barker</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>76</td>\n",
-       "      <td>6</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>35068 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           song  \\\n",
-       "0                (1-2-3-4-5-6-7) Count The Days   \n",
-       "1     (A Ship Will Come) Ein Schiff Wird Kommen   \n",
-       "2              (All Of A Sudden) My Heart Sings   \n",
-       "3                            (Baby) Hully Gully   \n",
-       "4         (Come round Here) Im The One You Need   \n",
-       "...                                         ...   \n",
-       "1474                                        pov   \n",
-       "1475                         pride.is.the.devil   \n",
-       "1476                          punchin.the.clock   \n",
-       "1477                             the.climb.back   \n",
-       "1478                            transparentsoul   \n",
-       "\n",
-       "                              artist  year  peak-rank  weeks-on-board  \\\n",
-       "0                Inez & Charlie Foxx  1968         76               5   \n",
-       "1                      Lale Anderson  1961         88               4   \n",
-       "2                         Mel Carter  1965         38               7   \n",
-       "3                       The Olympics  1960         72               7   \n",
-       "4                       The Miracles  1966         17               9   \n",
-       "...                              ...   ...        ...             ...   \n",
-       "1474                   Ariana Grande  2021         27              20   \n",
-       "1475              J. Cole & Lil Baby  2021          7               6   \n",
-       "1476                         J. Cole  2021         20               2   \n",
-       "1477                         J. Cole  2021         25               4   \n",
-       "1478  Willow Featuring Travis Barker  2021         76               6   \n",
-       "\n",
-       "      weeks-at-no1                track_id  \n",
-       "0              NaN  4wXNtDvLZl55vlQashWQrI  \n",
-       "1              NaN                     NaN  \n",
-       "2              NaN  6x5BiQwNlbtisITsEHa8Eu  \n",
-       "3              NaN  2CkbNJooPxUsHG4gFXKhxa  \n",
-       "4              NaN  5YvokzRkNONpj5c0TIqTjQ  \n",
-       "...            ...                     ...  \n",
-       "1474           NaN  3UoULw70kMsiVXxW0L3A33  \n",
-       "1475           NaN                     NaN  \n",
-       "1476           NaN                     NaN  \n",
-       "1477           NaN                     NaN  \n",
-       "1478           NaN                     NaN  \n",
-       "\n",
-       "[35068 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 68,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_billboard_df = pd.concat([df_1960s, df_1970s, df_1980s, df_1990s, df_2000s, df_2010s, df_2020s])\n",
-    "all_billboard_df"
+    "all_billboard_df.to_csv('./Resources/billboard_ALL.csv', index=False)"
    ]
   },
   {
@@ -2340,10 +2171,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.83, 0.517, 6, -6.416, 0, 0.333, 0.399, 8.95e-05, 0.0916, 0.616, 171.959, 182496, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_audio_features(\"2dNhNlpZAtV4lwAFW45LIv\"))\n",
+    "\n",
+    "df_2020s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "\n",
+    "# x[['danceability', 'energy', 'key', 'loudness', 'mode', 'speechiness', 'acousticness', 'instrumentalness',\n",
+    "#                  'liveness', 'valence', 'tempo', 'duration_ms', 'time_signature']] = x\\\n",
+    "#                     .swifter.apply(lambda row:get_audio_features(row.track_id),axis=1)\n",
+    "# x.to_csv(f'./Resources/billboard_1960s_features.csv', index=False)\n",
+    "\n",
+    "df_2020s['danceability'], df_2020s['energy'], df_2020s['key'], df_2020s['loudness'], df_2020s['mode'], df_2020s['speechiness'], df_2020s['acousticness'], \\\n",
+    "    df_2020s['instrumentalness'], df_2020s['liveness'], df_2020s['valence'], df_2020s['tempo'], df_2020s['duration_ms'], df_2020s['time_signature'] = \\\n",
+    "                                          zip(*df_2020s['track_id'].map(get_audio_features))\n",
+    "\n",
+    "df_2020s.to_csv(f'./Resources/billboard_2020s_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2010s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "df_2010s['danceability'], df_2010s['energy'], df_2010s['key'], df_2010s['loudness'], df_2010s['mode'], df_2010s['speechiness'], df_2010s['acousticness'], \\\n",
+    "    df_2010s['instrumentalness'], df_2010s['liveness'], df_2010s['valence'], df_2010s['tempo'], df_2010s['duration_ms'], df_2010s['time_signature'] = \\\n",
+    "                                          zip(*df_2010s['track_id'].map(get_audio_features))\n",
+    "df_2010s.to_csv(f'./Resources/billboard_2010s_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2000s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "df_2000s['danceability'], df_2000s['energy'], df_2000s['key'], df_2000s['loudness'], df_2000s['mode'], df_2000s['speechiness'], df_2000s['acousticness'], \\\n",
+    "    df_2000s['instrumentalness'], df_2000s['liveness'], df_2000s['valence'], df_2000s['tempo'], df_2000s['duration_ms'], df_2000s['time_signature'] = \\\n",
+    "                                          zip(*df_2000s['track_id'].map(get_audio_features))\n",
+    "df_2000s.to_csv(f'./Resources/billboard_2000s_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_1990s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "df_1990s['danceability'], df_1990s['energy'], df_1990s['key'], df_1990s['loudness'], df_1990s['mode'], df_1990s['speechiness'], df_1990s['acousticness'], \\\n",
+    "    df_1990s['instrumentalness'], df_1990s['liveness'], df_1990s['valence'], df_1990s['tempo'], df_1990s['duration_ms'], df_1990s['time_signature'] = \\\n",
+    "                                          zip(*df_1990s['track_id'].map(get_audio_features))\n",
+    "df_1990s.to_csv(f'./Resources/billboard_1990s_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1980s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "df_1980s['danceability'], df_1980s['energy'], df_1980s['key'], df_1980s['loudness'], df_1980s['mode'], df_1980s['speechiness'], df_1980s['acousticness'], \\\n",
+    "    df_1980s['instrumentalness'], df_1980s['liveness'], df_1980s['valence'], df_1980s['tempo'], df_1980s['duration_ms'], df_1980s['time_signature'] = \\\n",
+    "                                          zip(*df_1980s['track_id'].map(get_audio_features))\n",
+    "df_1980s.to_csv(f'./Resources/billboard_1980s_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1970s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "df_1970s['danceability'], df_1970s['energy'], df_1970s['key'], df_1970s['loudness'], df_1970s['mode'], df_1970s['speechiness'], df_1970s['acousticness'], \\\n",
+    "    df_1970s['instrumentalness'], df_1970s['liveness'], df_1970s['valence'], df_1970s['tempo'], df_1970s['duration_ms'], df_1970s['time_signature'] = \\\n",
+    "                                          zip(*df_1970s['track_id'].map(get_audio_features))\n",
+    "df_1970s.to_csv(f'./Resources/billboard_1970s_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1960s.dropna(subset=['track_id'], inplace=True)\n",
+    "\n",
+    "df_1960s['danceability'], df_1960s['energy'], df_1960s['key'], df_1960s['loudness'], df_1960s['mode'], df_1960s['speechiness'], df_1960s['acousticness'], \\\n",
+    "    df_1960s['instrumentalness'], df_1960s['liveness'], df_1960s['valence'], df_1960s['tempo'], df_1960s['duration_ms'], df_1960s['time_signature'] = \\\n",
+    "                                          zip(*df_1960s['track_id'].map(get_audio_features))\n",
+    "df_1960s.to_csv(f'./Resources/billboard_1960s_features.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
