Got track id and audio features for matched illboard tracks (abour 90%), saved as csv

--- a/billboard.ipynb
+++ b/billboard.ipynb
@@ -2171,6 +2171,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_features_to_df(df, file_name):\n",
+    "    df.dropna(subset=['track_id'], inplace=True)\n",
+    "    df['danceability'], df['energy'], df['key'], df['loudness'], df['mode'], df['speechiness'], df['acousticness'], \\\n",
+    "    df['instrumentalness'], df['liveness'], df['valence'], df['tempo'], df['duration_ms'], df['time_signature'] = \\\n",
+    "                                          zip(*df['track_id'].map(get_audio_features))\n",
+    "\n",
+    "    df.to_csv(f'./Resources/{file_name}_features.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
    "outputs": [
@@ -2192,12 +2207,7 @@
     "#                  'liveness', 'valence', 'tempo', 'duration_ms', 'time_signature']] = x\\\n",
     "#                     .swifter.apply(lambda row:get_audio_features(row.track_id),axis=1)\n",
     "# x.to_csv(f'./Resources/billboard_1960s_features.csv', index=False)\n",
-    "\n",
-    "df_2020s['danceability'], df_2020s['energy'], df_2020s['key'], df_2020s['loudness'], df_2020s['mode'], df_2020s['speechiness'], df_2020s['acousticness'], \\\n",
-    "    df_2020s['instrumentalness'], df_2020s['liveness'], df_2020s['valence'], df_2020s['tempo'], df_2020s['duration_ms'], df_2020s['time_signature'] = \\\n",
-    "                                          zip(*df_2020s['track_id'].map(get_audio_features))\n",
-    "\n",
-    "df_2020s.to_csv(f'./Resources/billboard_2020s_features.csv', index=False)"
+    "\n"
    ]
   },
   {
@@ -2216,72 +2226,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_2000s.dropna(subset=['track_id'], inplace=True)\n",
-    "\n",
-    "df_2000s['danceability'], df_2000s['energy'], df_2000s['key'], df_2000s['loudness'], df_2000s['mode'], df_2000s['speechiness'], df_2000s['acousticness'], \\\n",
-    "    df_2000s['instrumentalness'], df_2000s['liveness'], df_2000s['valence'], df_2000s['tempo'], df_2000s['duration_ms'], df_2000s['time_signature'] = \\\n",
-    "                                          zip(*df_2000s['track_id'].map(get_audio_features))\n",
-    "df_2000s.to_csv(f'./Resources/billboard_2000s_features.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1990s.dropna(subset=['track_id'], inplace=True)\n",
-    "\n",
-    "df_1990s['danceability'], df_1990s['energy'], df_1990s['key'], df_1990s['loudness'], df_1990s['mode'], df_1990s['speechiness'], df_1990s['acousticness'], \\\n",
-    "    df_1990s['instrumentalness'], df_1990s['liveness'], df_1990s['valence'], df_1990s['tempo'], df_1990s['duration_ms'], df_1990s['time_signature'] = \\\n",
-    "                                          zip(*df_1990s['track_id'].map(get_audio_features))\n",
-    "df_1990s.to_csv(f'./Resources/billboard_1990s_features.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1980s.dropna(subset=['track_id'], inplace=True)\n",
-    "\n",
-    "df_1980s['danceability'], df_1980s['energy'], df_1980s['key'], df_1980s['loudness'], df_1980s['mode'], df_1980s['speechiness'], df_1980s['acousticness'], \\\n",
-    "    df_1980s['instrumentalness'], df_1980s['liveness'], df_1980s['valence'], df_1980s['tempo'], df_1980s['duration_ms'], df_1980s['time_signature'] = \\\n",
-    "                                          zip(*df_1980s['track_id'].map(get_audio_features))\n",
-    "df_1980s.to_csv(f'./Resources/billboard_1980s_features.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1970s.dropna(subset=['track_id'], inplace=True)\n",
-    "\n",
-    "df_1970s['danceability'], df_1970s['energy'], df_1970s['key'], df_1970s['loudness'], df_1970s['mode'], df_1970s['speechiness'], df_1970s['acousticness'], \\\n",
-    "    df_1970s['instrumentalness'], df_1970s['liveness'], df_1970s['valence'], df_1970s['tempo'], df_1970s['duration_ms'], df_1970s['time_signature'] = \\\n",
-    "                                          zip(*df_1970s['track_id'].map(get_audio_features))\n",
-    "df_1970s.to_csv(f'./Resources/billboard_1970s_features.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1960s.dropna(subset=['track_id'], inplace=True)\n",
-    "\n",
-    "df_1960s['danceability'], df_1960s['energy'], df_1960s['key'], df_1960s['loudness'], df_1960s['mode'], df_1960s['speechiness'], df_1960s['acousticness'], \\\n",
-    "    df_1960s['instrumentalness'], df_1960s['liveness'], df_1960s['valence'], df_1960s['tempo'], df_1960s['duration_ms'], df_1960s['time_signature'] = \\\n",
-    "                                          zip(*df_1960s['track_id'].map(get_audio_features))\n",
-    "df_1960s.to_csv(f'./Resources/billboard_1960s_features.csv', index=False)"
+    "add_features_to_df(df_1990s, \"billboard_1990s\")\n",
+    "add_features_to_df(df_1980s, \"billboard_1980s\")\n",
+    "add_features_to_df(df_1970s, \"billboard_1970s\")\n",
+    "add_features_to_df(df_1960s, \"billboard_1960s\")"
    ]
   }
  ],
